[package]
name = "notch"
version = "0.1.0"
edition = "2021"
description = "NOTCH ratchet-curve token vault: quoted price only rises (buys advance the curve, sells redeem at NAV and pump the floor). No admin functions; vault SOL only exits via Sell."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.1.0"
borsh = "1.5.1"
solana-security-txt = "1.1.1"

[features]
# Local-validator test builds only: swaps the flagship NOTCH mint for the
# committed dev keypair (client/dev-notch-mint.json) so the launch hold-gate
# is testable off mainnet. Release/verifiable builds use default features.
dev-mint = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
